fix: profile - security align + cleanup

--- a/src/app/alert/alert-details/alert-details.component.css
+++ b/src/app/alert/alert-details/alert-details.component.css
@@ -8,10 +8,6 @@ md-card {
     width: 600px;
 }
 
-md-card-actions {
-    display: flex;
-}
-
 md-form-field {
     width: 100%;
 }
