--- a/src/app/user/user-details/user-details.component.css
+++ b/src/app/user/user-details/user-details.component.css
@@ -9,10 +9,6 @@ td{
   padding: 10px;
 }
 
-md-card-actions {
-  display: flex;
-}
-
 .example-full-width {
   width: 100%;
 }
