--- a/src/app/user/user-list/user-list.component.css
+++ b/src/app/user/user-list/user-list.component.css
@@ -1,7 +1,3 @@
-md-card-actions{
-  display: flex;
-}
-
 .table-head-controls{
   display: flex;
   flex-direction: row;
